# mleb

./: .env.example  .gitignore  README.md  pyproject.toml
results/: results.jsonl
results/BAAI__bge-m3/5617a9f61b028005a4858fdac845db406aefb181/: australian-tax-guidance-retrieval.json  bar-exam-qa.json  consumer-contracts-qa.json  contractual-clause-retrieval.json  echr-retrieval.json  gdpr-holdings-retrieval.json  housing-qa.json  irish-legislative-summaries.json  legal-rag-bench.json  license-tldr-retrieval.json  scalr.json  singaporean-judicial-keywords.json  uk-legislative-long-titles.json
results/Qwen__Qwen3-Embedding-0.6B/c54f2e6e80b2d7b7de06f51cec4959f6b3e03418/: australian-tax-guidance-retrieval.json  bar-exam-qa.json  consumer-contracts-qa.json  contractual-clause-retrieval.json  echr-retrieval.json  gdpr-holdings-retrieval.json  housing-qa.json  irish-legislative-summaries.json  legal-rag-bench.json  license-tldr-retrieval.json  model_meta.json  scalr.json  singaporean-judicial-keywords.json  uk-legislative-long-titles.json
results/Qwen__Qwen3-Embedding-4B/5cf2132abc99cad020ac570b19d031efec650f2b/: australian-tax-guidance-retrieval.json  bar-exam-qa.json  consumer-contracts-qa.json  contractual-clause-retrieval.json  echr-retrieval.json  gdpr-holdings-retrieval.json  housing-qa.json  irish-legislative-summaries.json  legal-rag-bench.json  license-tldr-retrieval.json  model_meta.json  scalr.json  singaporean-judicial-keywords.json  uk-legislative-long-titles.json
results/Qwen__Qwen3-Embedding-8B/1d8ad4ca9b3dd8059ad90a75d4983776a23d44af/: australian-tax-guidance-retrieval.json  bar-exam-qa.json  consumer-contracts-qa.json  contractual-clause-retrieval.json  echr-retrieval.json  gdpr-holdings-retrieval.json  housing-qa.json  irish-legislative-summaries.json  legal-rag-bench.json  license-tldr-retrieval.json  model_meta.json  scalr.json  singaporean-judicial-keywords.json  uk-legislative-long-titles.json
results/Snowflake__snowflake-arctic-embed-l-v2.0/ac6544c8a46e00af67e330e85a9028c66b8cfd9a/: australian-tax-guidance-retrieval.json  bar-exam-qa.json  consumer-contracts-qa.json  contractual-clause-retrieval.json  echr-retrieval.json  gdpr-holdings-retrieval.json  housing-qa.json  irish-legislative-summaries.json  legal-rag-bench.json  license-tldr-retrieval.json  model_meta.json  scalr.json  singaporean-judicial-keywords.json  uk-legislative-long-titles.json
results/Snowflake__snowflake-arctic-embed-l/d8fb21ca8d905d2832ee8b96c894d3298964346b/: australian-tax-guidance-retrieval.json  bar-exam-qa.json  (+9 more)
scripts/: config.py  export.py  helpers.py  mleb.py  models.py  structs.py
(+334 files in other folders)
