[project]
name = "mleb"
version = "0.1.0"
authors = [{ name = "Isaacus", email = "support@isaacus.com" }]
description = "Massive Legal Embedding Benchmark (MLEB)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isaacus>=0.8.0",
    "langchain>=0.3.27",
    "langchain-cohere>=0.4.5",
    "langchain-google-genai>=2.1.10",
    "langchain-openai>=0.3.32",
    "langchain-voyageai>=0.1.7",
    "msgspec>=0.19.0",
    "mteb>=1.38.49",
    "numpy>=2.3.2",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.4",
    "xformers>=0.0.32.post2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.urls]
Homepage = "https://docs.isaacus.com/mleb"
Documentation = "https://github.com/isaacus-dev/mleb/blob/main/README.md"
Issues = "https://github.com/isaacus-dev/mleb/issues"
Source = "https://github.com/isaacus-dev/mleb"

[tool.uv.sources]
mteb = { git = "https://github.com/embeddings-benchmark/mteb.git#721e8a34743c050179ee5e9093ed24ee7ab37fba" }

[tool.ruff]
exclude = [
    "__pycache__",
    "develop-eggs",
    "eggs",
    ".eggs",
    "wheels",
    "htmlcov",
    ".tox",
    ".nox",
    ".coverage",
    ".cache",
    ".pytest_cache",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pybuilder",
    "__pypackages__",
    ".env",
    ".venv",
    "venv",
    "env",
    "ENV",
    "env.bak",
    "venv.bak",
    ".archive",
    ".persist_cache",
    "site-packages",
    "node_modules",
    "dist",
    "build",
    "dist-info",
    "egg-info",
    ".hatchling",
    ".bzr",
    ".direnv",
    ".git",
    ".git-rewrite",
    ".hg",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".vscode",
    "_build",
    "buck-out",
    "migrations",
    "target",
    "bin",
    "lib",
    "lib64",
    "include",
    "share",
    "var",
    "tmp",
    "temp",
    "logs",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
fixable = ["ALL"]
unfixable = []
ignore = ["E741"]

[tool.ruff.lint.isort]
length-sort = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
lines-between-types = 1
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
